add de tags para google tag manager

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,7 +10,7 @@
         Nosso objetivo é ajudar você a alavancar sua presença na internet
         com eficiência e com o foco em converter mais clientes para seu negócio.
       </p>
-      <button class="secondary-button">
+      <button class="secondary-button" (click)="openWhatsApp()">
         <a href={{urlWhatsApp}} target='_blank'>FALE COM ESPECIALISTA</a>
       </button>
       <p class="primary-text">
