--- a/src/app/argumentos/argumentos.component.html
+++ b/src/app/argumentos/argumentos.component.html
@@ -37,7 +37,7 @@
             </p>
         </li>
     </ul>
-    <button class="secondary-button">
+    <button class="secondary-button" (click)="openWhatsApp()">
         <a href={{urlWhatsApp}} target='_blank'>FALE COM ESPECIALISTA</a>
     </button>
 </div>
