--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -7,7 +7,7 @@
                 Alcance muito mais clientes e lucratividade para o seu negócio
                 através de um site profissional feito pela flashsoluçoestech.
             </p>
-            <button class="secondary-button">
+            <button class="secondary-button" (click)="openWhatsApp()">
                 <a href={{urlWhatsApp}} target='_blank'>FALE COM ESPECIALISTA</a>
             </button>
             <p class="primary-text">
